test_regress/t/t_vlt_match_error_1.out
%Error: t/t_vlt_match_error.v:17:12: Importing from missing package 'hi'
   17 |     import hi::*;
      |            ^~
%Error: Exiting due to
